# crewai-legal

./: .env  README.md  pyproject.toml  template.md
src/multi_agent_legal_draft_automation/: crew.py  final_report_from_template.docx  main.py  test.md
src/multi_agent_legal_draft_automation/config/: agents.yaml  tasks.yaml
src/multi_agent_legal_draft_automation/src/multi_agent_legal_draft_automation/tools/: final_report_from_template.docx
src/multi_agent_legal_draft_automation/tools/: custom_tool.py  final_report_from_template.docx  model.py  template.docx  test_existing_template.py  test_template_doc.py
src/multi_agent_legal_draft_automation/tools/Results/: final_report_from_template_without_legal_ref.docx
