[project]
name = "multi_agent_legal_draft_automation"
version = "0.1.0"
description = "multi_agent_legal_draft_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "docx>=0.2.4",
    "python-docx>=1.1.2",
]

[project.scripts]
multi_agent_legal_draft_automation = "multi_agent_legal_draft_automation.main:run"
run_crew = "multi_agent_legal_draft_automation.main:run"
train = "multi_agent_legal_draft_automation.main:train"
replay = "multi_agent_legal_draft_automation.main:replay"
test = "multi_agent_legal_draft_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
